--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A lifter for the data from the FCA SUA website.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Alejandro Gómez García <alejandro.originx@gmail.com>",
   "license": "ISC",
