the lifter can map until 1 to 5 semester

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A lifter for the data from the FCA SUA website.",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "jest"
   },
   "author": "Alejandro Gómez García <alejandro.originx@gmail.com>",
