--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "start": "node index.js",
     "test": "jest",
-    "migrateSubjects": "node migrateSubjects.js"
+    "migrateSubjects": "node /scripts/migrateSubjects.js"
   },
   "author": "Alejandro Gómez García <alejandro.originx@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
+    "crawler-request": "^1.2.2",
     "mongodb": "^3.5.9",
+    "pdf-parse": "^1.1.1",
     "request-promise": "^4.2.5"
   },
   "devDependencies": {
