--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node index.js",
     "test": "jest",
     "migrateSubjects": "node scripts/migrateSubjects.js",
-    "migrateActivities": "node scripts/migrateActivities.js"
+    "migrateActivities": "node scripts/migrateActivities.js",
+    "globalMigration": "node scripts/globalMigration.js"
   },
   "author": "Alejandro Gómez García <alejandro.originx@gmail.com>",
   "license": "ISC",
