first two options added to the index menu of the CLI

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A lifter for the data from the FCA SUA website.",
   "main": "dist/index.js",
   "scripts": {
-    "start": "tsc && npm run globalMigration",
+    "start": "node dist/index.js",
     "build": "webpack",
     "test": "jest",
     "migrateSubjects": "node scripts/migrateSubjects.js",
